fix: adjust margin-bottom for hero and member cards for better spacing

--- a/css/2_2.css
+++ b/css/2_2.css
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   border-radius: 15px;
   padding: 30px 25px;
-  margin-bottom: 80px;
+  margin-bottom: 50px;
   min-height: 200px;
   display: flex;
   flex-direction: column;
